freest/test/prog/Invalid/SessionTypes/SessionTypeMismatch/SessionTypeMismatch.fst
module SessionTypeMismatch where

type IntBinPred : 1S
type IntBinPred = Int; Close
